--- a/ERPWeb/Views/AgroConfiguration/_GetRequisitionDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequisitionDetails.cshtml
@@ -5,16 +5,16 @@
     int sl = 0;
 }
 <div class="col-md-12">
-<table class="table table-responsive-lg">
+<table class="table table-bordered table-striped table-hover table-sm text-sm">
     <thead>
         <tr class="text-sm btn-dark">
-            <th>#SL</th>
-            <th>Raw Material Name</th>
-            <th>Unit</th>
-            <th>Requisition Quantity</th>
-            <th>Issue Quantity</th>
-            <th>Status</th>
-            <th>Remarks</th>
+            <th style="vertical-align:middle">#SL</th>
+            <th style="vertical-align:middle">Raw Material Name</th>
+            <th style="vertical-align:middle">Unit</th>
+            <th style="vertical-align:middle">Requisition Quantity</th>
+            <th style="vertical-align:middle">Issue Quantity</th>
+            <th style="vertical-align:middle">Status</th>
+            <th style="vertical-align:middle">Remarks</th>
             @*<th>Entry Date</th>*@
    
 
