--- a/ERPWeb/Views/AgroConfiguration/_GetRequisitionProduction.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequisitionProduction.cshtml
@@ -5,17 +5,17 @@
     int sl = 0;
 }
 
-<table class="table table-bordered table-sm table-striped" id="tblRequsitionInfo">
+<table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblRequsitionInfo">
     <thead class="btn-dark">
         <tr class="text-center">
-            <th>#SL</th>
+            <th style="vertical-align:middle">#SL</th>
             <th class="hide"></th>
-            <th>Requsition Code</th>
-            <th>State Status</th>
-            <th>Remarks</th>
-            <th>Requision by </th>
-            <th>Entry Date</th>
-            <th class="action">Actions</th>
+            <th style="vertical-align:middle">Requsition Code</th>
+            <th style="vertical-align:middle">State Status</th>
+            <th style="vertical-align:middle">Remarks</th>
+            <th style="vertical-align:middle">Requision by </th>
+            <th style="vertical-align:middle">Entry Date</th>
+            <th class="action" style="vertical-align:middle">Actions</th>
         </tr>
     </thead>
     <tbody>
