--- a/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
@@ -5,18 +5,18 @@
     int sl = 0;
 }
 <div class="col-md-12">
-    <table class="table table-responsive-lg"  id="tblRequisitonDetails">
+    <table class="table table-bordered table-striped table-hover table-sm text-sm"  id="tblRequisitonDetails">
         <thead>
             <tr class="text-sm btn-dark">
-                <th>#SL</th>
-                <th>Raw Material Name</th>
-                <th>Unit</th>
-                <th>Requisition Quantity</th>
-                <th>AvailableQty</th>
-                <th>Issue Quantity</th>
+                <th style="vertical-align:middle">#SL</th>
+                <th style="vertical-align:middle">Raw Material Name</th>
+                <th style="vertical-align:middle">Unit</th>
+                <th style="vertical-align:middle">Requisition Quantity</th>
+                <th style="vertical-align:middle">AvailableQty</th>
+                <th style="vertical-align:middle">Issue Quantity</th>
 
-                <th>Status</th>
-                <th>Remarks</th>
+                <th style="vertical-align:middle">Status</th>
+                <th style="vertical-align:middle">Remarks</th>
                 @*<th>Entry Date</th>*@
 
 
