--- a/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
@@ -6,8 +6,8 @@
 }
 <div class="col-md-12">
     <table class="table table-bordered table-striped table-hover table-sm text-sm"  id="tblRequisitonDetails">
-        <thead>
-            <tr class="text-sm btn-dark">
+        <thead class="btn-dark">
+            <tr class="text-center text-sm">
                 <th style="vertical-align:middle">#SL</th>
                 <th style="vertical-align:middle">Raw Material Name</th>
                 <th style="vertical-align:middle">Unit</th>
@@ -30,18 +30,18 @@
                 {
                     sl++;
             <tr>
-                <td>@sl</td>
-                <td>@item.RawMaterialName</td>
-                <td>@item.UnitName</td>
-                <td>@item.RequisitionQuantity</td>
-                <td class="" style="color:red">@item.AvailableQty</td>
+                <td class="text-center">@sl</td>
+                <td class="text-center">@item.RawMaterialName</td>
+                <td class="text-center">@item.UnitName</td>
+                <td class="text-center">@item.RequisitionQuantity</td>
+                <td class="text-center" style="color:red">@item.AvailableQty</td>
 
-                <td style="width:10%">
+                <td class="text-center" style="width:10%">
                     <input type="number" class="issueQty form-control form-control-sm " value="0"  />
                     <span class="error hide">Quantity must be <=available Quantity</span>
                 </td>
-                <td>@item.Status</td>
-                <td>@item.Remarks</td>
+                <td class="text-center">@item.Status</td>
+                <td class="text-center">@item.Remarks</td>
                 <td class="hide unitId" >@item.UnitID</td>
                 <td class="hide infoId">@item.RawMaterialRequisitionInfoId</td>
                 <td class="hide detailsId">@item.RawMaterialRequisitionDetailsId</td>
