--- a/ERPWeb/Reports/ERPRpt/Agriculture/rptInvoiceWiseSalesReport.rdlc
+++ b/ERPWeb/Reports/ERPRpt/Agriculture/rptInvoiceWiseSalesReport.rdlc
@@ -900,6 +900,8 @@
                             <Value>=Fields!StockiestName.Value</Value>
                             <Style>
                               <FontSize>8pt</FontSize>
+                              <FontWeight>Bold</FontWeight>
+                              <Color>Green</Color>
                             </Style>
                           </TextRun>
                         </TextRuns>
@@ -914,7 +916,7 @@
                         <Color>LightGrey</Color>
                         <Style>Solid</Style>
                       </Border>
-                      <BackgroundColor>Green</BackgroundColor>
+                      <VerticalAlign>Middle</VerticalAlign>
                       <PaddingLeft>2pt</PaddingLeft>
                       <PaddingRight>2pt</PaddingRight>
                       <PaddingTop>2pt</PaddingTop>
@@ -952,6 +954,7 @@
                             <Color>LightGrey</Color>
                             <Style>Solid</Style>
                           </Border>
+                          <VerticalAlign>Middle</VerticalAlign>
                           <PaddingLeft>2pt</PaddingLeft>
                           <PaddingRight>2pt</PaddingRight>
                           <PaddingTop>2pt</PaddingTop>
@@ -999,6 +1002,7 @@
                                 <Color>LightGrey</Color>
                                 <Style>Solid</Style>
                               </Border>
+                              <VerticalAlign>Middle</VerticalAlign>
                               <PaddingLeft>2pt</PaddingLeft>
                               <PaddingRight>2pt</PaddingRight>
                               <PaddingTop>2pt</PaddingTop>
@@ -1046,6 +1050,7 @@
                                     <Color>LightGrey</Color>
                                     <Style>Solid</Style>
                                   </Border>
+                                  <VerticalAlign>Middle</VerticalAlign>
                                   <PaddingLeft>2pt</PaddingLeft>
                                   <PaddingRight>2pt</PaddingRight>
                                   <PaddingTop>2pt</PaddingTop>
@@ -1093,6 +1098,7 @@
                                         <Color>LightGrey</Color>
                                         <Style>Solid</Style>
                                       </Border>
+                                      <VerticalAlign>Middle</VerticalAlign>
                                       <PaddingLeft>2pt</PaddingLeft>
                                       <PaddingRight>2pt</PaddingRight>
                                       <PaddingTop>2pt</PaddingTop>
@@ -1140,6 +1146,7 @@
                                             <Color>LightGrey</Color>
                                             <Style>Solid</Style>
                                           </Border>
+                                          <VerticalAlign>Middle</VerticalAlign>
                                           <PaddingLeft>2pt</PaddingLeft>
                                           <PaddingRight>2pt</PaddingRight>
                                           <PaddingTop>2pt</PaddingTop>
@@ -1190,7 +1197,7 @@
         <Top>2.29042in</Top>
         <Left>0.04042in</Left>
         <Height>0.85541in</Height>
-        <Width>7.70138in</Width>
+        <Width>7.70139in</Width>
         <ZIndex>10</ZIndex>
         <Style>
           <Border>
@@ -1268,7 +1275,7 @@
     <Height>3.14583in</Height>
     <Style />
   </Body>
-  <Width>7.7418in</Width>
+  <Width>7.74181in</Width>
   <Page>
     <PageHeight>11.69in</PageHeight>
     <PageWidth>8.27in</PageWidth>
