--- a/ERPWeb/Views/Shared/_Layout.cshtml
+++ b/ERPWeb/Views/Shared/_Layout.cshtml
@@ -334,7 +334,7 @@
             // check this out on a mobile device.
             if (/Mobi/.test(navigator.userAgent)) {
                 setInterval(function () {
-                    navigator.vibrate();
+                   // navigator.vibrate();
                 }, 3000);
             }
 
