--- a/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
@@ -140,11 +140,14 @@
                     InvoiceNo:  dropDownSelectedText("ddlInvoiceNo"),
                     InvoiceDate: ddlInvoiceNo.val(),
 
-                    ReturnQuanity: tds.eq(6).html(),
-                    ReturnPerUnitPrice: tds.eq(7).html(),
-                    FinishGoodProductInfoId: tds.eq(8).html(),
-                    MeasurementId: tds.eq(9).html(),
-                    MeasurementSize: tds.eq(3).html(),
+                    QtyKG: tds.eq(2).html(),
+
+                    ReturnQuanity: tds.eq(7).html(),
+                    ReturnPerUnitPrice: tds.eq(8).html(),
+                    FinishGoodProductInfoId: tds.eq(9).html(),
+                    MeasurementId: tds.eq(10).html(),
+                    MeasurementSize: tds.eq(4).html(),
+                    FGRId: tds.eq(11).html(),
                     
 
                 });
