--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
@@ -32,6 +32,7 @@
         <tr class="text-center">
             <th>#SL</th>
             <th>Product Name</th>
+            <th>UnitQty</th>
             <th>Measurment Name</th>
             <th>Measurment Size</th>
             <th>Sales Quantity</th>
@@ -49,6 +50,7 @@
         <tr>
             <td class="text-center">@sl</td>
             <td class="text-center">@item.FinishGoodProductName</td>
+            <td class="text-center">@item.QtyKG</td>
             <td class="text-center">@item.MeasurementName</td>
             <td class="text-center">@item.MeasurementSize</td>
             <td class="text-center">@item.Quanity</td>
@@ -60,6 +62,7 @@
             @*<td class="hide"><input type="number" />@item.ProductSalesInfoId</td>*@
             <td class="hide">@item.FinishGoodProductInfoId</td>
             <td class="hide">@item.MeasurementId</td>
+            <td class="hide">@item.FGRId</td>
      
         </tr>
         }
