--- a/ERPWeb/Views/AgroConfiguration/_SalesReturnListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_SalesReturnListview.cshtml
@@ -14,6 +14,7 @@
                     <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle">Invoice No</th>
                     <th style="vertical-align:middle">Product Name</th>
+                    <th style="vertical-align:middle">Recipe Unit Qty</th>
                     <th style="vertical-align:middle">Quantity</th>
                     <th style="vertical-align:middle">Unit Price</th>
                     <th style="vertical-align:middle">Return Date</th>
@@ -32,6 +33,7 @@
                         <td class="hide">@item.ProductSalesInfoId</td>
                         <td class="text-center">@item.InvoiceNo</td>
                         <td class="text-center">@item.FinishGoodProductName</td>
+                        <td class="text-center">@item.QtyKG</td>
                         <td class="text-center">@item.ReturnQuanity</td>
                         <td class="text-center">@item.ReturnPerUnitPrice</td>
                         <td class="text-center">@item.ReturnDate</td>
